--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,8 @@
 bidict==0.22.0
 cachelib==0.9.0
 click==8.1.3
+eventlet==0.33.1
 Flask==2.1.3
-Flask-Cors==3.0.10
-Flask-Session==0.4.0
-Flask-SocketIO==4.3.1
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
